fixed footer height on mobile

--- a/src/app/component/footer/footer.component.css
+++ b/src/app/component/footer/footer.component.css
@@ -96,6 +96,6 @@ img {
     }
 
     footer {
-        height: 115px;
+        height: 115px !important;
     }
 }
